--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import "bootstrap-vue/dist/bootstrap-vue.css";
 @import "./emojione/emojione.min.css";
 @import "./emojione/emojionearea.min.css";
+@import "vue-multiselect/dist/vue-multiselect.min.css";
 @import "./linebot.css";
 // @import "./common.css";
 @import "./chat.scss";
