--- a/app/views/reservations/inquiry_success.html.erb
+++ b/app/views/reservations/inquiry_success.html.erb
@@ -1,7 +1,7 @@
 <div class="alert alert-success" role="alert">
-  <h4 class="alert-heading">送信完了</h4>
+  <h4 class="alert-heading">予約要求送信完了</h4>
   <p class="py-2">
-    <%= @survey.success_message || 'ご回答ありがとうございました！' %>
+    ご予約ありがとうございました！
   </p>
   <hr>
   <p class="mb-0">上部✖︎ボタンを押して終了してください</p>
