Change service name from LINE CMS → HOTEL INSIGHT CRM

--- a/app/views/user/base/_header.html.erb
+++ b/app/views/user/base/_header.html.erb
@@ -34,7 +34,7 @@
   </ul>
   <div class="float-left d-sm-block d-md-none ml-3">
     <%= link_to user_root_path, class: "logo ml-4 logo-light" do %>
-      <span class="text-dark brand-text font-weight-bold">LINE CMS</span>
+      <span class="text-dark brand-text font-weight-bold">HOTEL INSIGHT CRM</span>
     <% end %>
   </div>
   <button class="button-menu-mobile open-left disable-btn">
