--- a/app/views/admin/base/_left_sidebar_menu.html.erb
+++ b/app/views/admin/base/_left_sidebar_menu.html.erb
@@ -2,7 +2,7 @@
 <div class="left-side-menu">
   <!-- LOGO -->
   <%= link_to admin_root_path, class: "logo ml-4 logo-light" do %>
-    <span class="text-white brand-text font-weight-bold">LINE CMS</span>
+    <span class="text-white brand-text font-weight-bold">HOTEL INSIGHT CRM</span>
   <% end %>
 
   <div class="h-100" id="left-side-menu-container" data-simplebar>
