--- a/app/views/agency/base/_left_sidebar_menu.html.erb
+++ b/app/views/agency/base/_left_sidebar_menu.html.erb
@@ -2,7 +2,7 @@
 <div class="left-side-menu">
   <!-- LOGO -->
   <a href="index.html" class="logo ml-4 logo-light">
-    <span class="text-white brand-text font-weight-bold">LINE CMS</span>
+    <span class="text-white brand-text font-weight-bold">HOTEL INSIGHT CRM</span>
   </a>
 
   <div class="h-100" id="left-side-menu-container" data-simplebar>
