--- a/app/views/user/base/_header.html.erb
+++ b/app/views/user/base/_header.html.erb
@@ -12,8 +12,8 @@
           <% end %>
         </span>
         <span>
+          <span class="account-position"><%= current_user&.role_i18n %></span>
           <span class="account-user-name"><%= current_user&.name %></span>
-          <span class="account-position">管理者</span>
         </span>
       </a>
       <div class="dropdown-menu dropdown-menu-right dropdown-menu-animated topbar-dropdown-menu profile-dropdown">
