--- a/app/views/admin/base/_header.html.erb
+++ b/app/views/admin/base/_header.html.erb
@@ -7,6 +7,10 @@
         <span class="account-user-avatar">
           <img src="https://icon-library.com/images/user-icon-image/user-icon-image-18.jpg" alt="user-image" class="rounded-circle">
         </span>
+        <span>
+          <span class="account-position"><%= current_admin&.role_i18n %></span>
+          <span class="account-user-name"><%= current_admin&.name %></span>
+        </span>
       </a>
       <div class="dropdown-menu dropdown-menu-right dropdown-menu-animated topbar-dropdown-menu profile-dropdown">
         <!-- item-->
