Get quota after init line bot account

--- a/app/views/user/base/_left_sidebar_menu.html.erb
+++ b/app/views/user/base/_left_sidebar_menu.html.erb
@@ -106,7 +106,7 @@
          <!-- 空室待ち履歴 -->
         <li class="side-nav-item <%= controller?("user/rsv_bookmarks") ? 'mm-active' : '' %>">
           <%= link_to user_rsv_bookmarks_path, class: "side-nav-link #{controller?("user/rsv_bookmarks" ) ? 'active' : '' }" do %>
-            <i class="uil-tag-alt"></i>
+            <i class="uil-history"></i>
             <span>空室待ち履歴</span>
           <% end %>
         </li>
