--- a/doc/public/css/style.css
+++ b/doc/public/css/style.css
@@ -1,84 +1,108 @@
-/**
- * apidoc main css file
- */
-
-/**
- * Define colors
- */
-:root {
-  --primary: #0088cc;
-  --white: #fff;
-  --light-gray: #ccc;
-  --main-gray: #777;
-  --dark-gray: #2d2d2d;
-  --hover-gray: #666;
-  --meth-get: green;
-  --meth-put: #e5c500;
-  --meth-post: #4070ec;
-  --meth-delete: #ed0039;
-  --red: #dc3545;
-}
-
-.color-primary {
-  color: var(--primary);
-}
-
-.bg-primary {
-  background-color: var(--primary);
-}
-
-.bg-red {
-  color: var(--white);
-  background-color: var(--red);
-}
-
-.border-danger {
-  border: 1px solid var(--red);
-}
-
-/** for some reason the iOS safari style is applied on date inputs */
-input[type="date"] {
-  line-height: 1.4 !important;
-}
-
 /* ------------------------------------------------------------------------------------------
  * Content
  * ------------------------------------------------------------------------------------------ */
-@font-face {
-  font-family: 'Glyphicons Halflings';
-  src: url('./glyphicons-halflings-regular.eot');
-  src: url('./glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
-    url('./glyphicons-halflings-regular.woff') format('woff'),
-    url('./glyphicons-halflings-regular.ttf') format('truetype'),
-    url('./glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
-}
-
 body {
-  font-family: "Source Sans Pro", sans-serif;
+  max-width: 1280px;
 }
 
-a:focus {
-  background-color: var(--primary);
+body, p, a, div, th, td {
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+}
+
+@media (min-width: 1200px) {
+  body.container-fluid {
+    padding-right: 0px;
+    padding-left: 0px;
+    margin-right: 0px;
+    margin-left: 0px;
+  }
+}
+
+td.code {
+  font-size: 14px;
+  font-family: "Source Code Pro", monospace;
+  font-style: normal;
+  font-weight: 400;
 }
 
 #content {
-  margin-top: 10px;
-  margin-left: 20%;
-  padding-left: 10px;
+  padding-top: 16px;
+  z-Index: -1;
+  margin-left: 270px;
 }
 
 p {
-  font-size: 130%;
-  color: var(--main-gray);
+  color: #808080;
+}
+
+h1 {
+  font-family: "Source Sans Pro Semibold", sans-serif;
+  font-weight: normal;
+  font-size: 44px;
+  line-height: 50px;
+  margin: 0 0 10px 0;
+  padding: 0;
+}
+
+h2 {
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 40px;
+  margin: 0 0 20px 0;
+  padding: 0;
 }
 
 section {
+  border-top: 1px solid #ebebeb;
   padding: 30px 0;
 }
 
+section h1 {
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 40px;
+  padding-bottom: 14px;
+  margin: 0 0 20px 0;
+  padding: 0;
+}
+
 article {
-  border-top: 1px solid var(--light-gray);
   padding: 14px 0 30px 0;
+}
+
+article h1 {
+  font-family: "Source Sans Pro Bold", sans-serif;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 26px;
+}
+
+article h2 {
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 24px;
+  margin: 0 0 10px 0;
+}
+
+article h3 {
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 18px;
+  margin: 0 0 10px 0;
+}
+
+article h4 {
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 16px;
+  margin: 0 0 8px 0;
 }
 
 table {
@@ -88,41 +112,30 @@ table {
 }
 
 th {
-  background-color: var(--main-gray);
-  color: var(--white);
+  background-color: #f5f5f5;
   text-align: left;
-  padding: 5px 8px;
-  border: 1px solid var(--main-gray);
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 700;
+  padding: 4px 8px;
+  border: #e0e0e0 1px solid;
 }
 
 td {
-  padding: 5px;
-  border: 1px solid var(--main-gray);
+  vertical-align: top;
+  padding: 10px 8px 0 8px;
+  border: #e0e0e0 1px solid;
 }
 
-td.code {
-  font-family: "Source Code Pro", monospace;
-  font-weight: 600;
+#generator .content {
+  color: #b0b0b0;
+  border-top: 1px solid #ebebeb;
+  padding: 10px 0;
 }
 
-.label {
+.label-optional {
   float: right;
-  margin-top: 4px;
-  user-select: none;
-}
-
-.label.optional {
   background-color: grey;
-}
-
-.label.required {
-  background-color: var(--red);
-}
-
-.default-value,
-.type-size {
-  font-style: italic;
-  font-size: 95%;
+  margin-top: 4px;
 }
 
 .open-left {
@@ -130,39 +143,38 @@ td.code {
   left: auto;
 }
 
-.invisible {
-  visibility: hidden;
+/* ------------------------------------------------------------------------------------------
+ * apidoc - intro
+ * ------------------------------------------------------------------------------------------ */
+
+#apidoc .apidoc {
+  border-top: 1px solid #ebebeb;
+  padding: 30px 0;
 }
 
-.input-group-addon.sample-request-select {
-  padding: 0 6px;
+#apidoc h1 {
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 40px;
+  padding-bottom: 14px;
+  margin: 0 0 20px 0;
+  padding: 0;
 }
 
-.input-group-addon.sample-request-select select {
-  width: auto;
-  height: 32px;
-}
-
-.sample-request-input-Boolean-container {
-  width: 40px;
-  height: 34px;
-  background: var(--white);
-  border: 1px solid var(--light-gray);
-}
-
-.sample-request-input-Boolean-container > div {
-  margin-top: 7px;
-  text-align: center;
-}
-
-.sample-request-input-Boolean-container > div input {
-  margin: 0;
+#apidoc h2 {
+  font-family: "Source Sans Pro Bold", sans-serif;
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 26px;
+  padding-top: 14px;
 }
 
 /* ------------------------------------------------------------------------------------------
- * Request method (HTTP verb)
+ * Request type
  * ------------------------------------------------------------------------------------------ */
-.method {
+.type {
+  font-family: "Source Sans Pro", sans-serif;
   font-weight: 600;
   font-size: 15px;
   display: inline-block;
@@ -170,50 +182,54 @@ td.code {
   padding: 4px 5px;
   border-radius: 6px;
   text-transform: uppercase;
-  background-color: var(--main-gray);
-  color: var(--white);
+  background-color: #3387CC;
+  color: #ffffff;
 }
 
-.meth-get {
-  background-color: var(--meth-get);
+.type__get {
+  background-color: green;
 }
 
-.meth-put {
-  background-color: var(--meth-put);
+.type__put {
+  background-color: #e5c500;
 }
 
-.meth-post {
-  background-color: var(--meth-post);
+.type__post {
+  background-color: #4070ec;
 }
 
-.meth-delete {
-  background-color: var(--meth-delete);
+.type__delete {
+  background-color: #ed0039;
 }
 
 /* ------------------------------------------------------------------------------------------
  * Sidenav
  * ------------------------------------------------------------------------------------------ */
 .sidenav {
-  color: var(--white);
-  width: 20%;
+  width: 228px;
+  margin: 0;
+  padding: 0 20px 20px 20px;
   position: fixed;
   top: 50px;
   left: 0;
   bottom: 0;
   overflow-x: hidden;
   overflow-y: auto;
-  background-color: var(--dark-gray);
+  background-color: #f5f5f5;
+  z-index: 10;
 }
 
 .sidenav > li > a {
-  color: var(--white);
   display: block;
-  padding: 8px 13px;
-}
-
-/* non active sidenav link are highlighted on hover */
-.sidenav > li:not(.active) > a:hover {
-  background-color: var(--hover-gray);
+  width: 192px;
+  margin: 0;
+  padding: 2px 11px;
+  border: 0;
+  border-left: transparent 4px solid;
+  border-right: transparent 4px solid;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
 }
 
 .sidenav > li.nav-header {
@@ -223,42 +239,39 @@ td.code {
 
 .sidenav > li.nav-header > a {
   padding: 5px 15px;
+  border: 1px solid #e5e5e5;
+  width: 190px;
+  font-family: "Source Sans Pro", sans-serif;
   font-weight: 700;
   font-size: 16px;
-  background-color: var(--main-gray);
+  background-color: #ffffff;
 }
-
 
 .sidenav > li.active > a {
-  position: relative;
-  background-color: var(--primary);
-  color: var(--white);
+    position: relative;
+    z-index: 2;
+    background-color: #0088cc;
+    color: #ffffff;
 }
 
-/**
- * TODO: commented out for the moment
 .sidenav > li.has-modifications a {
-  border-right: 4px solid var(--main-gray);
-}
-
-.nav-list-item :not(.is-new) {
-  border-left: 4px solid var(--main-gray);
+  border-right: #60d060 4px solid;
 }
 
 .sidenav > li.is-new a {
-  border-left: 4px solid var(--primary);
+  border-left: #e5e5e5 4px solid;
 }
-*/
 
 /* ------------------------------------------------------------------------------------------
  * Side nav search
  * ------------------------------------------------------------------------------------------ */
 .sidenav-search {
-  width: 20%;
+  width: 228px;
   left: 0px;
   position: fixed;
   padding: 16px 20px 10px 20px;
-  background-color: var(--dark-gray);
+  background-color: #F5F5F5;
+  z-index: 11;
 }
 
 .sidenav-search .search {
@@ -464,16 +477,9 @@ ul.nav-tabs {
 }
 
 p.deprecated span{
-  color: var(--red);
+  color: #ff0000;
   font-weight: bold;
   text-decoration: underline;
-}
-
-/**
- * Footer
- */
-#generator {
-  padding: 10px 0;
 }
 
 /* ------------------------------------------------------------------------------------------
