--- a/app/views/user/base/_left_sidebar_menu.html.erb
+++ b/app/views/user/base/_left_sidebar_menu.html.erb
@@ -3,7 +3,7 @@
 
   <!-- LOGO -->
   <%= link_to user_root_path, class: "logo ml-4 logo-light" do %>
-    <span class="text-white brand-text font-weight-bold">HOTEL INSIGHT CRM</span>
+    <span class="text-white brand-text font-weight-bold">LINE CRM</span>
   <% end %>
 
   <div class="h-100" id="left-side-menu-container" data-simplebar>
