Send a scenario to tester's line friend accounts (#262)
* Send a scenario to testers

* Add flag is_tester_account to line_friends table

* Fix comments

--- a/app/views/user/scenario_messages/index.html.erb
+++ b/app/views/user/scenario_messages/index.html.erb
@@ -14,4 +14,4 @@
   </div>
 </div>
 
-<scenario-message-index :scenario="<%= @scenario.to_json %>"></scenario-message-index>
+<scenario-message-index :scenario="<%= @scenario.to_json %>" :testers="<%= @testers %>"></scenario-message-index>
