Add review page for admin

--- a/app/views/user/base/_left_sidebar_menu.html.erb
+++ b/app/views/user/base/_left_sidebar_menu.html.erb
@@ -111,6 +111,14 @@
           <% end %>
         </li>
 
+        <li class="side-nav-title side-nav-item">満足度評価</li>
+        <li class="side-nav-item <%= controller?("user/reviews") ? 'mm-active' : '' %>">
+          <%= link_to user_reviews_path, class: "side-nav-link #{controller?("user/reviews" ) ? 'active' : '' }" do %>
+            <i class="uil-history"></i>
+            <span>満足度評価結果</span>
+          <% end %>
+        </li>
+
         <li class="side-nav-title side-nav-item">友だち属性</li>
         <!-- タグ管理 -->
         <li class="side-nav-item <%= controller?("user/tags") ? 'mm-active' : '' %>">
