Style css, and add validation for review form

--- a/app/views/reviews/result.html.erb
+++ b/app/views/reviews/result.html.erb
@@ -1,7 +1,7 @@
 <div class="alert alert-success" role="alert">
-  <h4 class="alert-heading">予約要求送信完了</h4>
+  <h4 class="alert-heading">満足度アンケートの答え送信完了</h4>
   <p class="py-2">
-    ご予約ありがとうございました！
+    お答えありがとうございました！
   </p>
   <hr>
   <p class="mb-0">上部✖︎ボタンを押して終了してください</p>
