--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= javascript_pack_tag 'application' %>
   </head>
 
-  <body>
+  <body class="<%= yield(:body_class) if content_for?(:body_class) %>">
     <div class="wrapper" id="application">
       <div class="container">
         <div class="content">
