--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,12 +1,11 @@
 
-<%= custom_flash_message %>
-<%= flash[:danger] %>
-<div class="card mb-3 review-container">
-  <div class="review-image">
-    <%= image_tag 'company_avatar_2x.png', class: "card-img-top" %>
-    <p class=review-image-caption>LINE INSIGHT 満足度アンケート</p>
+<% content_for(:body_class, 'new-review-page') %>
+<div class="card mb-3 review-container border">
+  <div class="review-image position-relative">
+    <%= image_tag 'company_avatar.png', class: "card-img-top" %>
+    <h3 class="review-image-caption position-absolute text-white">LINE INSIGHT 満足度アンケート</h3>
   </div>
-  <div class="card-body review-form">
+  <div class="card-body review-form pt-0">
     <review-form friend-line-id="<%= @friend_line_id %>"></review-form>
   </div>
 </div>
