--- a/app/views/user/base/_left_sidebar_menu.html.erb
+++ b/app/views/user/base/_left_sidebar_menu.html.erb
@@ -114,7 +114,7 @@
         <li class="side-nav-title side-nav-item">満足度評価</li>
         <li class="side-nav-item <%= controller?("user/reviews") ? 'mm-active' : '' %>">
           <%= link_to user_reviews_path, class: "side-nav-link #{controller?("user/reviews" ) ? 'active' : '' }" do %>
-            <i class="uil-history"></i>
+            <i class="uil-star"></i>
             <span>満足度評価結果</span>
           <% end %>
         </li>
