Fix comments and fix reviews's order on the list screen, rebase code

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -3,7 +3,7 @@
 <div class="card mb-3 review-container border">
   <div class="review-image position-relative">
     <%= image_tag 'company_avatar.png', class: "card-img-top" %>
-    <h3 class="review-image-caption position-absolute text-white">LINE INSIGHT 満足度アンケート</h3>
+    <h3 class="review-image-caption position-absolute text-white">LINE INSIGHT サービス評価</h3>
   </div>
   <div class="card-body review-form pt-0">
     <review-form friend-line-id="<%= @friend_line_id %>"></review-form>
