--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,6 +1,6 @@
 
 <% content_for(:body_class, 'new-review-page') %>
-<div class="card mb-3 review-container border">
+<div class="card mb-3 review-container">
   <div class="review-image position-relative">
     <%= image_tag 'company_avatar.png', class: "card-img-top" %>
     <h3 class="review-image-caption position-absolute text-white">LINE INSIGHT サービス評価</h3>
