--- a/app/views/user/reviews/index.html.erb
+++ b/app/views/user/reviews/index.html.erb
@@ -1,1 +1,15 @@
+<div class="row">
+  <div class="col-12">
+    <div class="page-title-box">
+      <div class="page-title-right">
+        <ol class="breadcrumb m-0">
+          <li class="breadcrumb-item">サービス評価</li>
+          <li class="breadcrumb-item active">サービス評価一覧</li>
+        </ol>
+      </div>
+      <h4 class="page-title">サービス評価一覧</h4>
+    </div>
+  </div>
+</div>
+
 <review-index></review-index>
