--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -2,7 +2,7 @@
 <% content_for(:body_class, 'new-review-page') %>
 <div class="card mb-3 review-container">
   <div class="review-image position-relative">
-    <%= image_tag 'company_avatar.png', class: "card-img-top" %>
+    <%= image_tag 'review_banner.png', class: "card-img-top" %>
     <h3 class="review-image-caption position-absolute text-white">LINE INSIGHT サービス評価</h3>
   </div>
   <div class="card-body review-form pt-0">
