--- a/app/javascript/stylesheets/override.scss
+++ b/app/javascript/stylesheets/override.scss
@@ -148,13 +148,16 @@ label {
   }
 }
 
-.review-container {
+.review-container, .confirm-reservation-container {
   max-width: 680px;
   padding: 0 20px;
   margin: 0 auto;
   background-color: rgba(73, 95, 126, 0.04) !important;
   .review-form {
     padding: 0 !important;
+  }
+  .confirm-reservation-main {
+    background-color: white;
   }
   .review-image {
     margin-bottom: 40px;
@@ -165,13 +168,16 @@ label {
       transform: translate(50%, -50%);
     }
   }
+  .room-image {
+    margin-bottom: 20px;
+  }
 }
 
 @media screen and (max-width: 767.98px) {
   .review-container.border {
     border: none;
   }
-  .new-review-page {
+  .new-review-page, .confirm-reservation {
     .container, .container-fluid, .container-fluid.p-2 {
       padding: 0 !important;
       margin: 0 auto !important;
@@ -180,8 +186,8 @@ label {
       width: 100%;
       max-width: unset !important;
     }
-    .review-container {
-      .review-image {
+    .review-container, .confirm-reservation-container {
+      .review-image, .room-image {
         margin-top: 10px;
         .review-image-caption {
           width: 100%;
