--- a/app/views/contacts/confirm_reservation_result.html.erb
+++ b/app/views/contacts/confirm_reservation_result.html.erb
@@ -1,1 +1,8 @@
-<h1>confirm Result!</h1>
+<div class="alert alert-success" role="alert">
+  <h4 class="alert-heading">新しい予約確認完了</h4>
+  <p class="py-2">
+    ご確認してありがとうございました！
+  </p>
+  <hr>
+  <p class="mb-0">上部✖︎ボタンを押して終了してください</p>
+</div>
