Minor ui fixes (#350)
* Make buttons on reply box bigger

* Change service name to 「Hotel Insight CRM」

--- a/app/views/mailers/system_mailer/notify_assignee.html.erb
+++ b/app/views/mailers/system_mailer/notify_assignee.html.erb
@@ -5,5 +5,5 @@
 割当日：<b><%= Time.zone.today.strftime('%Y年%m月%d日') %></b>
 </p>
 <p>
-LINE CRMで確認 <%= @channel_url %>
+Hotel Insight CRMで確認 <%= @channel_url %>
 </p>
