Change logo url on agency pages

--- a/app/views/agency/base/_left_sidebar_menu.html.erb
+++ b/app/views/agency/base/_left_sidebar_menu.html.erb
@@ -1,9 +1,9 @@
   <!-- ========== Left Sidebar Start ========== -->
 <div class="left-side-menu">
   <!-- LOGO -->
-  <a href="index.html" class="logo ml-4 logo-light">
+  <%= link_to agency_root_path, class: "logo ml-4 logo-light" do %>
     <span class="text-white brand-text font-weight-bold">Hotel Insight CRM</span>
-  </a>
+  <% end %>
 
   <div class="h-100" id="left-side-menu-container" data-simplebar>
     <!--- Sidemenu -->
