--- a/app/views/user/base/_left_sidebar_menu.html.erb
+++ b/app/views/user/base/_left_sidebar_menu.html.erb
@@ -118,10 +118,12 @@
             <span>サービス評価一覧</span>
           <% end %>
         </li>
+
+        <li class="side-nav-title side-nav-item">URLクリック測定</li>
         <li class="side-nav-item <%= controller?("user/sites") ? 'mm-active' : '' %>">
           <%= link_to user_sites_path, class: "side-nav-link #{controller?("user/sites" ) ? 'active' : '' }" do %>
             <i class="uil-link"></i>
-            <span>URLクリック測定</span>
+            <span>URLクリック測定一覧</span>
           <% end %>
         </li>
 
