--- a/app/views/user/sites/index.html.erb
+++ b/app/views/user/sites/index.html.erb
@@ -7,7 +7,7 @@
           <li class="breadcrumb-item active">URLクリック測定一覧</li>
         </ol>
       </div>
-      <h4 class="page-title">URLクリック測定一覧</h4>
+      <h4 class="page-title">URLクリック測定</h4>
     </div>
   </div>
 </div>
