Add validate, save data to db

--- a/app/views/user/stream_routes/new.html.erb
+++ b/app/views/user/stream_routes/new.html.erb
@@ -12,4 +12,4 @@
     </div>
   </div>
 </div>
-<stream-route-form></stream-route-form>
+<stream-route-form :folder_options="<%= @folder_options_for_select %>"></stream-route-form>
