--- a/app/views/stream_routes/show.html.erb
+++ b/app/views/stream_routes/show.html.erb
@@ -1,1 +1,6 @@
-<stream-route-base></stream-route-base>
+<stream-route-base 
+  :code="'<%= params[:code].to_s %>'" 
+  :friendship_status_changed="'<%= params[:friendship_status_changed].to_s %>'"
+  :added_friend_before="'<%= params[:added_friend_before].to_s %>'"
+>
+</stream-route-base>
