--- a/app/views/user/base/_left_sidebar_menu.html.erb
+++ b/app/views/user/base/_left_sidebar_menu.html.erb
@@ -127,6 +127,14 @@
           <% end %>
         </li>
 
+        <li class="side-nav-title side-nav-item">流入経路分析</li>
+        <li class="side-nav-item <%= controller?("user/stream_routes") ? 'mm-active' : '' %>">
+          <%= link_to user_stream_routes_path, class: "side-nav-link #{controller?("user/stream_routes" ) ? 'active' : '' }" do %>
+            <i class="uil-enter"></i>
+            <span>流入経路一覧</span>
+          <% end %>
+        </li>
+
         <li class="side-nav-title side-nav-item">友だち属性</li>
         <!-- タグ管理 -->
         <li class="side-nav-item <%= controller?("user/tags") ? 'mm-active' : '' %>">
