Only dot-homes user can use google sheet sync feature

--- a/app/views/user/surveys/edit.html.erb
+++ b/app/views/user/surveys/edit.html.erb
@@ -14,4 +14,4 @@
   </div>
 </div>
 
-<survey-editor :survey_id="<%= @survey_id %>"></survey-editor>
+<survey-editor :survey_id="<%= @survey_id %>" :can_sync_ggsheet="<%= @can_sync_ggsheet %>"></survey-editor>
