Hotfix font size is wrong

--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -13,7 +13,7 @@
     <%= javascript_pack_tag 'application' %>
   </head>
 
-  <body class="sidebar-mini layout-fixed control-sidebar-slide-open layout-navbar-fixed text-sm" style="height: auto;">
+  <body class="sidebar-mini layout-fixed control-sidebar-slide-open layout-navbar-fixed" style="height: auto;">
     <div class="wrapper" id="application">
       <%= render "admin/base/left_sidebar_menu"%>
       <div class="content-page">
