Hide review function

--- a/app/views/user/base/_left_sidebar_menu.html.erb
+++ b/app/views/user/base/_left_sidebar_menu.html.erb
@@ -111,8 +111,8 @@
           <% end %>
         </li>
 
-        <li class="side-nav-title side-nav-item">サービス評価</li>
-        <li class="side-nav-item <%= controller?("user/reviews") ? 'mm-active' : '' %>">
+        <li class="side-nav-title side-nav-item" hidden>サービス評価</li>
+        <li class="side-nav-item <%= controller?("user/reviews") ? 'mm-active' : '' %>" hidden>
           <%= link_to user_reviews_path, class: "side-nav-link #{controller?("user/reviews" ) ? 'active' : '' }" do %>
             <i class="uil-star"></i>
             <span>サービス評価一覧</span>
