LIS-746 show message too long (#463)

--- a/app/views/user/home/index.html.erb
+++ b/app/views/user/home/index.html.erb
@@ -52,7 +52,6 @@
                 <th>送信日時</th>
                 <th>名前</th>
                 <th>メッセージ</th>
-                <th></th>
               </tr>
             </thead>
             <tbody>
@@ -64,7 +63,7 @@
                   <td class="fw-240">
                     <%= message.sender.name %>
                   </td>
-                  <td>
+                  <td class="fw-240">
                     <div class="max-2-lines"><%= message.text %></div>
                   </td>
                 </tr>
