--- a/app/views/reservations/precheckin_form.html.erb
+++ b/app/views/reservations/precheckin_form.html.erb
@@ -1,1 +1,1 @@
-<precheckin-form friend-line-id="<%= @friend_line_id %>"></precheckin-form>
+<precheckin-form friend-line-id="<%= params[:friend_line_id] %>"></precheckin-form>
