--- a/app/views/reservations/precheckin_detail_form.html.erb
+++ b/app/views/reservations/precheckin_detail_form.html.erb
@@ -1,1 +1,1 @@
-<precheckin-detail-form :precheckin-data="<%= @precheckin_data.to_json %>" friend-line-id="<%= @friend_line_id %>"></precheckin-detail-form>
+<precheckin-detail-form :precheckin-data="<%= @precheckin_data.to_json %>" friend-line-id="<%= params[:friend_line_id] %>"></precheckin-detail-form>
