--- a/app/views/user/base/_left_sidebar_menu.html.erb
+++ b/app/views/user/base/_left_sidebar_menu.html.erb
@@ -110,6 +110,13 @@
             <span>空室待ち履歴</span>
           <% end %>
         </li>
+         <!-- 事前チェックイン管理 -->
+        <li class="side-nav-item <%= controller?("user/precheckins") ? 'mm-active' : '' %>">
+          <%= link_to user_precheckins_path, class: "side-nav-link #{controller?("user/precheckins" ) ? 'active' : '' }" do %>
+            <i class="uil-history"></i>
+            <span>事前チェックイン管理</span>
+          <% end %>
+        </li>
 
         <li class="side-nav-title side-nav-item" hidden>サービス評価</li>
         <li class="side-nav-item <%= controller?("user/reviews") ? 'mm-active' : '' %>" hidden>
