Update precheckin menu icon

--- a/app/views/user/base/_left_sidebar_menu.html.erb
+++ b/app/views/user/base/_left_sidebar_menu.html.erb
@@ -113,7 +113,7 @@
          <!-- 事前チェックイン管理 -->
         <li class="side-nav-item <%= controller?("user/precheckins") ? 'mm-active' : '' %>">
           <%= link_to user_precheckins_path, class: "side-nav-link #{controller?("user/precheckins" ) ? 'active' : '' }" do %>
-            <i class="uil-history"></i>
+            <i class="uil-ticket"></i>
             <span>事前チェックイン管理</span>
           <% end %>
         </li>
