--- a/app/views/user/base/_left_sidebar_menu.html.erb
+++ b/app/views/user/base/_left_sidebar_menu.html.erb
@@ -110,11 +110,11 @@
             <span>空室待ち履歴</span>
           <% end %>
         </li>
-         <!-- 事前チェックイン管理 -->
+         <!-- 事前チェックイン -->
         <li class="side-nav-item <%= controller?("user/precheckins") ? 'mm-active' : '' %>">
           <%= link_to user_precheckins_path, class: "side-nav-link #{controller?("user/precheckins" ) ? 'active' : '' }" do %>
             <i class="uil-ticket"></i>
-            <span>事前チェックイン管理</span>
+            <span>事前チェックイン</span>
           <% end %>
         </li>
 
