--- a/app/views/user/precheckins/index.html.erb
+++ b/app/views/user/precheckins/index.html.erb
@@ -4,10 +4,10 @@
       <div class="page-title-right">
         <ol class="breadcrumb m-0">
           <li class="breadcrumb-item">予約管理</li>
-          <li class="breadcrumb-item active">事前チェックイン管理</li>
+          <li class="breadcrumb-item active">事前チェックイン</li>
         </ol>
       </div>
-      <h4 class="page-title">事前チェックイン管理</h4>
+      <h4 class="page-title">事前チェックイン</h4>
     </div>
   </div>
 </div>
