--- a/app/views/layouts/agency/application.html.erb
+++ b/app/views/layouts/agency/application.html.erb
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= stylesheet_pack_tag 'application' %>
+    <%= stylesheet_link_tag 'application' %>
     <link href="/css/icons.min.css" rel="stylesheet" type="text/css" />
     <link href="/css/app.min.css" rel="stylesheet" type="text/css" id="light-style" />
     <script src="/js/vendor.min.js"></script>
     <script src="/js/app.min.js"></script>
-    <%= javascript_pack_tag 'application' %>
+    <%= javascript_include_tag 'application', 'data-turbo-track': 'reload', type: 'module' %>
   </head>
 
   <body class="sidebar-mini layout-fixed control-sidebar-slide-open layout-navbar-fixed" style="height: auto;">
