--- a/app/views/layouts/auth.html.erb
+++ b/app/views/layouts/auth.html.erb
@@ -13,8 +13,8 @@
     <!-- bundle -->
     <script src="/js/vendor.min.js"></script>
     <script src="/js/app.min.js"></script>
-    <%= stylesheet_pack_tag 'application' %>
-    <%= javascript_pack_tag 'application' %>
+    <%= stylesheet_link_tag 'application' %>
+    <%= javascript_include_tag 'application', 'data-turbo-track': 'reload', type: 'module' %>
   </head>
 
   <body data-scrollbar-auto-hide="n" class="authentication-bg">
