--- a/app/views/layouts/auth.html.erb
+++ b/app/views/layouts/auth.html.erb
@@ -14,7 +14,7 @@
     <script src="/js/vendor.min.js"></script>
     <script src="/js/app.min.js"></script>
     <%= stylesheet_link_tag 'application' %>
-    <%= javascript_include_tag 'application', 'data-turbo-track': 'reload', type: 'module' %>
+    <%= javascript_include_tag 'application', 'data-turbo-track': 'reload' %>
   </head>
 
   <body data-scrollbar-auto-hide="n" class="authentication-bg">
