Viteへの移行に伴い、アセットビルドプロセスを更新。Vue.jsのバージョンを3.5.17にアップデートし、関連する依存関係を追加。`.browserslistrc`ファイルを削除し、`.gitignore`を更新してVite関連のファイルを無視するように設定。`Procfile.dev`を修正し、開発サーバーの起動方法を変更。READMEを更新し、システム要件やセットアップ手順を明確化。

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,10 @@
     <link href="/css/app.min.css" rel="stylesheet" type="text/css" id="light-style" />
     <script src="/js/vendor.min.js"></script>
     <script src="/js/app.min.js"></script>
-    <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
     <%= stylesheet_link_tag "application" %>
+    <%= vite_client_tag %>
+    <%= vite_javascript_tag 'application' %>
+
   </head>
 
   <body class="<%= yield(:body_class) if content_for?(:body_class) %>">
