--- a/app/views/layouts/agency/application.html.erb
+++ b/app/views/layouts/agency/application.html.erb
@@ -10,7 +10,8 @@
     <link href="/css/app.min.css" rel="stylesheet" type="text/css" id="light-style" />
     <script src="/js/vendor.min.js"></script>
     <script src="/js/app.min.js"></script>
-    <%= javascript_include_tag 'application', 'data-turbo-track': 'reload', type: 'module' %>
+    <%= vite_client_tag %>
+    <%= vite_javascript_tag 'application' %>
   </head>
 
   <body class="sidebar-mini layout-fixed control-sidebar-slide-open layout-navbar-fixed" style="height: auto;">
