--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <link href="/css/app.min.css" rel="stylesheet" type="text/css" id="light-style" />
     <script src="/js/vendor.min.js"></script>
     <script src="/js/app.min.js"></script>
-    <%= vite_stylesheet_tag 'application' %>
+    <%= vite_stylesheet_tag 'application.scss' %>
     <% if Rails.env.development? %>
       <%= vite_client_tag %>
     <% end %>
