--- a/app/views/layouts/auth.html.erb
+++ b/app/views/layouts/auth.html.erb
@@ -13,7 +13,7 @@
     <!-- bundle -->
     <script src="/js/vendor.min.js"></script>
     <script src="/js/app.min.js"></script>
-    <%= vite_stylesheet_tag 'application' %>
+    <%= vite_stylesheet_tag 'application.scss' %>
     <% if Rails.env.development? %>
       <%= vite_client_tag %>
     <% end %>
